--- a/lib/src/main/res/values/attrs.xml
+++ b/lib/src/main/res/values/attrs.xml
@@ -3,10 +3,12 @@
     <declare-styleable name="ArcSeekBar">
         <attr name="thumb" format="reference" />
         <attr name="progress" format="integer" />
+        <attr name="middle" format="integer" />
         <attr name="maxProgress" format="integer" />
         <attr name="progressColor" format="color" />
         <attr name="progressWidth" format="dimension" />
         <attr name="progressBackgroundColor" format="color" />
+        <attr name="progressMiddleColor" format="color" />
         <attr name="progressBackgroundWidth" format="dimension" />
         <attr name="roundEdges" format="boolean" />
         <attr name="enabled" format="boolean" />
